--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=cat-cafe
+spring.application.name=car-rental
+spring.datasource.url=jdbc:mysql://localhost:3306/cat_cafe
+spring.datasource.username=root
+spring.datasource.password=my-secret-pw
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.springframework.security=DEBUG
